Fix price details link not showing

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -287,6 +287,10 @@ main.reservation-page {
             }
             a {
               cursor: pointer;
+              color: #000;
+              &:hover {
+                text-decoration: underline;
+              }
             }
             span {
               .viewport-mobile & {
